[package]
name = "c_byte_array_generator"
version = "0.1.0"
authors = ["Pete Dietl <petedietl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ">=0.7.3"
clap = { version = ">=4.0.10", features = ["derive"] }
